--- a/buki's-bar.html
+++ b/buki's-bar.html
@@ -1,6 +1,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
     rel="stylesheet" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" rel="stylesheet" />
+<!-- https://www.cssscript.com/cover-flow-card-carousel/ -->
 <style type="text/css">
     .mn-b {
         background-image: url(https://pendulo.com/archivos/fondo-bukowski.png);
@@ -13,8 +14,22 @@
         margin-right: 15px;
     }
 
+    .row.equal {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
     .title {
         display: none !important;
+    }
+
+    #titulo {
+        margin-bottom: -70px;
+    }
+
+    img.logo {
+        width: 40%;
+        border: none !important;
     }
 
     h1.titulo {
@@ -24,11 +39,16 @@
         font-size: 25px;
         font-weight: 600;
         text-align: left;
-        margin-bottom: 1px;
+        margin-top: 25px;
+        margin-bottom: 15px;
     }
 
-    .black-text {
-        color: #454545;
+    #descripcion {
+        background-color: rgba(175, 175, 175, .2);
+    }
+
+    .white-text {
+        color: #FFEFD9;
     }
 
     .red-text {
@@ -40,7 +60,7 @@
 
     .cont {
         width: 100%;
-        padding: 30px 0;
+        padding: 70px;
     }
 
     .cont img {
@@ -162,6 +182,230 @@
         text-align: center;
     }
 
+    .slider {
+        width: 100%;
+    }
+    .slider input {
+        display: none;
+    }
+    .testimonials {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        min-height: 350px;
+        perspective: 1000px;
+        overflow: hidden;
+    }
+    .testimonials .item {
+        top: 0;
+        position: absolute;
+        box-sizing: border-box;
+        background-color: #0A0220;
+        padding: 30px;
+        width: 450px;
+        text-align: center;
+        transition: transform 0.4s;
+        -webkit-transform-style: preserve-3d;
+        box-shadow: 0 0 10px rgba(0,0,0,0.3);
+        user-select: none;
+        cursor: pointer;
+    }
+    .testimonials .item img {
+        width: 100%;
+        border: 13px solid #3B344D;
+    }
+    .dots {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .dots label {
+        display: block;
+        height: 5px;
+        width: 5px;
+        border-radius: 50%;
+        cursor: pointer;
+        background-color: #413B52;
+        margin: 7px;
+        transition: transform 0.2s, color 0.2s;
+    }
+    /* First */
+    #t-1:checked ~ .dots label[for="t-1"] {
+        transform: scale(2);
+        background-color: #fff;
+    }
+    #t-1:checked ~ .dots label[for="t-2"] {
+        transform: scale(1.5);
+    }
+    #t-1:checked ~ .testimonials label[for="t-1"] {
+        z-index: 4;
+    }
+    #t-1:checked ~ .testimonials label[for="t-2"] {
+        transform: translateX(300px) translateZ(-90px) rotateY(-15deg);
+        z-index: 3;
+    }
+    #t-1:checked ~ .testimonials label[for="t-3"] {
+        transform: translateX(600px) translateZ(-180px) rotateY(-25deg);
+        z-index: 2;
+    }
+    #t-1:checked ~ .testimonials label[for="t-4"] {
+        transform: translateX(900px) translateZ(-270px) rotateY(-35deg);
+        z-index: 1;
+    }
+    #t-1:checked ~ .testimonials label[for="t-5"] {
+        transform: translateX(1200px) translateZ(-360px) rotateY(-45deg);
+    }
+    #t-1:checked ~ .testimonials label[for="t-6"] {
+        transform: translateX(1200px) translateZ(-360px) rotateY(-45deg);
+    }
+    /* Second */
+    #t-2:checked ~ .dots label[for="t-1"] {
+        transform: scale(1.5);
+    }
+    #t-2:checked ~ .dots label[for="t-2"] {
+        transform: scale(2);
+        background-color: #fff;
+    }
+    #t-2:checked ~ .dots label[for="t-3"] {
+        transform: scale(1.5);
+    }
+    #t-2:checked ~ .testimonials label[for="t-1"] {
+        transform: translateX(-300px) translateZ(-90px) rotateY(15deg);
+    }
+    #t-2:checked ~ .testimonials label[for="t-2"] {
+        z-index: 3;
+    }
+    #t-2:checked ~ .testimonials label[for="t-3"] {
+        transform: translateX(300px) translateZ(-90px) rotateY(-15deg);
+        z-index: 2;
+    }
+    #t-2:checked ~ .testimonials label[for="t-4"] {
+        transform: translateX(600px) translateZ(-180px) rotateY(-25deg);
+        z-index: 1;
+    }
+    #t-2:checked ~ .testimonials label[for="t-5"] {
+        transform: translateX(900px) translateZ(-270px) rotateY(-35deg);
+    }
+    #t-2:checked ~ .testimonials label[for="t-6"] {
+        transform: translateX(900px) translateZ(-270px) rotateY(-35deg);
+    }
+    /* Third */
+    #t-3:checked ~ .dots label[for="t-2"] {
+        transform: scale(1.5);
+    }
+    #t-3:checked ~ .dots label[for="t-3"] {
+        transform: scale(2);
+        background-color: #fff;
+    }
+    #t-3:checked ~ .dots label[for="t-4"] {
+        transform: scale(1.5);
+    }
+    #t-3:checked ~ .testimonials label[for="t-1"] {
+        transform: translateX(-600px) translateZ(-180px) rotateY(25deg);
+    }
+    #t-3:checked ~ .testimonials label[for="t-2"] {
+        transform: translateX(-300px) translateZ(-90px) rotateY(15deg);
+    }
+    #t-3:checked ~ .testimonials label[for="t-3"] {
+        z-index: 3;
+    }
+    #t-3:checked ~ .testimonials label[for="t-4"] {
+        transform: translateX(300px) translateZ(-90px) rotateY(-15deg);
+        z-index: 2;
+    }
+    #t-3:checked ~ .testimonials label[for="t-5"] {
+        transform: translateX(600px) translateZ(-180px) rotateY(-25deg);
+    }
+    #t-3:checked ~ .testimonials label[for="t-6"] {
+        transform: translateX(600px) translateZ(-180px) rotateY(-25deg);
+    }
+    /* Fourth */
+    #t-4:checked ~ .dots label[for="t-3"] {
+        transform: scale(1.5);
+    }
+    #t-4:checked ~ .dots label[for="t-4"] {
+        transform: scale(2);
+        background-color: #fff;
+    }
+    #t-4:checked ~ .dots label[for="t-5"] {
+        transform: scale(1.5);
+    }
+    #t-4:checked ~ .testimonials label[for="t-1"] {
+        transform: translateX(-900px) translateZ(-270px) rotateY(35deg);
+    }
+    #t-4:checked ~ .testimonials label[for="t-2"] {
+        transform: translateX(-600px) translateZ(-180px) rotateY(25deg);
+    }
+    #t-4:checked ~ .testimonials label[for="t-3"] {
+        transform: translateX(-300px) translateZ(-90px) rotateY(15deg);
+        z-index: 2;
+    }
+    #t-4:checked ~ .testimonials label[for="t-4"] {
+        z-index: 3;
+    }
+    #t-4:checked ~ .testimonials label[for="t-5"] {
+        transform: translateX(300px) translateZ(-90px) rotateY(-15deg);
+    }
+    #t-4:checked ~ .testimonials label[for="t-6"] {
+        transform: translateX(300px) translateZ(-90px) rotateY(-15deg);
+    }
+    /* Fifth */
+    #t-5:checked ~ .dots label[for="t-4"] {
+        transform: scale(1.5);
+    }
+    #t-5:checked ~ .dots label[for="t-5"] {
+        transform: scale(2);
+        background-color: #fff;
+    }
+    #t-5:checked ~ .testimonials label[for="t-1"] {
+        transform: translateX(-1200px) translateZ(-360px) rotateY(45deg);
+    }
+    #t-5:checked ~ .testimonials label[for="t-2"] {
+        transform: translateX(-900px) translateZ(-270px) rotateY(35deg);
+        z-index: 1;
+    }
+    #t-5:checked ~ .testimonials label[for="t-3"] {
+        transform: translateX(-600px) translateZ(-180px) rotateY(25deg);
+        z-index: 2;
+    }
+    #t-5:checked ~ .testimonials label[for="t-4"] {
+        transform: translateX(-300px) translateZ(-90px) rotateY(15deg);
+        z-index: 3;
+    }
+    #t-5:checked ~ .testimonials label[for="t-5"] {
+        z-index: 4;
+    }
+    #t-5:checked ~ .testimonials label[for="t-6"] {
+        z-index: 4;
+    }
+    /* Sixth */
+    #t-6:checked ~ .dots label[for="t-5"] {
+        transform: scale(1.5);
+    }
+    #t-6:checked ~ .dots label[for="t-1"] {
+        transform: scale(2);
+        background-color: #fff;
+    }
+    #t-6:checked ~ .testimonials label[for="t-2"] {
+        transform: translateX(-1200px) translateZ(-360px) rotateY(45deg);
+    }
+    #t-6:checked ~ .testimonials label[for="t-3"] {
+        transform: translateX(-900px) translateZ(-270px) rotateY(35deg);
+        z-index: 1;
+    }
+    #t-6:checked ~ .testimonials label[for="t-4"] {
+        transform: translateX(-600px) translateZ(-180px) rotateY(25deg);
+        z-index: 2;
+    }
+    #t-6:checked ~ .testimonials label[for="t-5"] {
+        transform: translateX(-300px) translateZ(-90px) rotateY(15deg);
+        z-index: 3;
+    }
+    #t-6:checked ~ .testimonials label[for="t-6"] {
+        z-index: 4;
+    }
+
     /*MEDIA QUARRIES*/
     @media only screen and (max-width: 500px) {
         .cont {
@@ -275,27 +519,28 @@
         }
     }
 </style>
-<div class="cont mn-b">
-    <!--TITULO-->
-    <div id="logo" class="row">
-        <div class="col-sm-12">
-            <img src="https://pendulo.com/archivos/logo-bukowski-bar.png" alt="Logo Bukowski's Bar">
-        </div>
+<!--TITULO-->
+<div id="titulo" class="row">
+    <div class="col-sm-12" style="display: flex; justify-content: center;">
+        <img src="https://pendulo.com/archivos/logo-bukowski-bar.png" class="logo" alt="Logo Bukowski's Bar">
     </div>
+</div>
 
+<div class="cont mn-b">    
     <!--INTRO-->
     <div id="intro">
-        <h1 class="titulo">Pasa tardes inolvidables en nuestro Bukowski's Bar...</h1>
         <div class="row">
+            <h1 class="titulo">Pasa tardes inolvidables en nuestro Bukowski's Bar...</h1>
+        </div>
+        <div class="row equal">
             <div id="descripcion" class="col-sm-6">
-                <p class="platillo black-text">En la sucursal de Zona Rosa se encuentra el Bar Bukowski's, un espacio que rinde culto a los bohemios escritores inspirados por el alcohol. En él, se puede degustar de una amplia gama de cocteles, vinos y botanas, rodeado de frases literarias. Además, de martes a domingo se puede disfrutar de las sesiones de jazz en vivo.</p>
+                <p class="platillo white-text">En la sucursal de Zona Rosa se encuentra el Bar Bukowski's, un espacio que rinde culto a los bohemios escritores inspirados por el alcohol. En él, se puede degustar de una amplia gama de cocteles, vinos y botanas, rodeado de frases literarias. Además, de martes a domingo se puede disfrutar de las sesiones de jazz en vivo.</p>
             </div>
-    
             <div id="fotos" class="col-sm-6">
-                <div class="owl-carousel owl-theme" style="padding: 0 20px;">
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
+                <div class="fotos owl-carousel owl-theme" style="padding: 0 20px;">
+                    <div class="item"><img alt="" src="/archivos/bukowski-foto1.png" style="margin:0;float:none!important;" title=""></div>
+                    <div class="item"><img alt="" src="/archivos/bukowski-foto2.png" style="margin:0;float:none!important;" title=""></div>
+                    <div class="item"><img alt="" src="/archivos/bukowski-foto3.png" style="margin:0;float:none!important;" title=""></div>
                 </div>
             </div>
         </div>
@@ -303,17 +548,46 @@
 
     <!--EVENTOS-->
     <div id="eventos">
-        <h1 class="titulo">Todos nuestros eventos</h1>
+        <div class="row">
+            <h1 class="titulo">Todos nuestros eventos</h1>
+        </div>
         <div class="row">
             <div class="col-sm-12">
-                <div class="owl-carousel owl-theme" style="padding: 0 20px;">
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
+                <div class="slider">
+                    <input type="radio" name="testimonial" id="t-1">
+                    <input type="radio" name="testimonial" id="t-2">
+                    <input type="radio" name="testimonial" id="t-3" checked="">
+                    <input type="radio" name="testimonial" id="t-4">
+                    <input type="radio" name="testimonial" id="t-5">
+                    <input type="radio" name="testimonial" id="t-6">
+                    <div class="testimonials">
+                        <label class="item" for="t-1">
+                            <img src="/archivos/2_barbukowskis_historias.jpg" alt="picture">
+                        </label>
+                        <label class="item" for="t-2">
+                            <img src="/archivos/3_barbukowskis_historias.jpg" alt="picture">
+                        </label>
+                        <label class="item" for="t-3">
+                            <img src="/archivos/4_barbukowskis_historias.jpg" alt="picture">
+                        </label>
+                        <label class="item" for="t-4">
+                            <img src="/archivos/5_barbukowskis_historias.jpg" alt="picture">
+                        </label>
+                        <label class="item" for="t-5">
+                            <img src="/archivos/6_barbukowskis_historias.jpg" alt="picture">
+                        </label>
+                        <label class="item" for="t-6">
+                            <img src="/archivos/7_barbukowskis_historias.jpg" alt="picture">
+                        </label>
+                    </div>
+                    <div class="dots">
+                        <label for="t-1"></label>
+                        <label for="t-2"></label>
+                        <label for="t-3"></label>
+                        <label for="t-4"></label>
+                        <label for="t-5"></label>
+                        <label for="t-6"></label>
+                    </div>
                 </div>
             </div>
         </div>
@@ -321,10 +595,12 @@
 
     <!--RECOMENDACIONES-->
     <div id="recomendaciones">
-        <h1 class="titulo">Te recomendamos</h1>
+        <div class="row">
+            <h1 class="titulo">Te recomendamos</h1>
+        </div>
         <div class="row">
             <div class="col-sm-12">
-                <div class="owl-carousel owl-theme" style="padding: 0 20px;">
+                <div class="recomendaciones owl-carousel owl-theme" style="padding: 0 20px;">
                     <div class="item">
                         <a href="https://pendulo.com/especial/menu" target="blank">
                             <img alt="" src="/archivos/aperol-mail.jpg" style="margin:0;float:none!important;" title="" />
@@ -348,22 +624,38 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script>
-    $('.owl-carousel')
-        .owlCarousel({
-            loop: true,
-            margin: 10,
-
-            autoplay: true,
-            responsive: {
-                0: {
-                    items: 1
-                },
-                600: {
-                    items: 2
-                },
-                1000: {
-                    items: 2
-                }
+    $('.recomendaciones').owlCarousel({
+        loop: true,
+        margin: 10,
+        autoplay: true,
+        responsive: {
+            0: {
+                items: 1
+            },
+            600: {
+                items: 2
+            },
+            1000: {
+                items: 2
             }
-        })
+        }
+    });
+
+    $('.fotos').owlCarousel({
+        loop: true,
+        margin: 10,
+        autoplay: true,
+        dots: false,
+        responsive: {
+            0: {
+                items: 1
+            },
+            600: {
+                items: 1
+            },
+            1000: {
+                items: 1
+            }
+        }
+    });
 </script>
