calorias desayuno, comida y postres done

--- a/menu.html
+++ b/menu.html
@@ -3123,7 +3123,7 @@
 										href="#collapsePostres1" role="button" aria-expanded="true"
 										style="text-decoration: none; width: 95%;">
 										<div class="flex-rz space-between items-center">
-											<p class="name-wrap arvo flex-start">TARTA DE LIMÓN </p>
+											<p class="name-wrap arvo flex-start">TARTA DE LIMÓN <sub class="mustache-text">(979 cal)</sub></p>
 											<img class="mr-1" src="https://pendulo.com/archivos/ideal-compartir.png" style="margin-top: 3px; height: 17px;" alt="">
 										</div>
 									</a>
@@ -3133,14 +3133,9 @@
 									</a>
 								</div>
 								<div class="flex-rz space-between">
-									<p class="name roboto-condensed"><span class="mustache-text">1 porción</span></p>
+									<p class="name roboto-condensed"><span class="mustache-text">325g</span></p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed"> $96</p>
-								</div>
-								<div class="flex-rz space-between">
-									<p class="name roboto-condensed">Calorías</p>
-									<span class="line-1"></span>
-									<p class="name roboto-condensed"><span class="mustache-text">900 calorías</span></p>
+									<p class="name roboto-condensed"> $112</p>
 								</div>
 								<div class="collapse" id="collapsePostres1">
 									<img src="./img/fotos/postre-paidelimon.jpg" alt=""
@@ -3157,7 +3152,7 @@
 									<a class="collapse-button text-center" data-toggle="collapse"
 										href="#collapsePostres2" role="button" aria-expanded="true"
 										style="text-decoration: none;">
-										<p class="name arvo">MINI POSTRES</p>
+										<p class="name arvo">MINI POSTRES <sub class="mustache-text">(839 cal)</sub></p>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapsePostres2"
 										aria-expanded="true">
@@ -3167,12 +3162,7 @@
 								<div class="flex-rz space-between">
 									<p class="name roboto-condensed"><span class="mustache-text">1 porción</span></p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed"> $57</p>
-								</div>
-								<div class="flex-rz space-between">
-									<p class="name roboto-condensed">Calorías</p>
-									<span class="line-1"></span>
-									<p class="name roboto-condensed"><span class="mustache-text">900 calorías</span></p>
+									<p class="name roboto-condensed"> $63</p>
 								</div>
 								<div class="collapse" id="collapsePostres2">
 									<img src="./img/fotos/placeholder.png" alt="" style="width: 100%; margin: 10px 0;">
@@ -3191,7 +3181,7 @@
 									<a class="collapse-button text-center" data-toggle="collapse"
 										href="#collapsePostres3" role="button" aria-expanded="true"
 										style="text-decoration: none;">
-										<p class="name arvo">STRUDEL CASERO</p>
+										<p class="name arvo">STRUDEL CASERO <sub class="mustache-text">(544 cal)</sub></p>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapsePostres3"
 										aria-expanded="true">
@@ -3199,14 +3189,9 @@
 									</a>
 								</div>
 								<div class="flex-rz space-between">
-									<p class="name roboto-condensed"><span class="mustache-text">1 porción</span></p>
+									<p class="name roboto-condensed"><span class="mustache-text">211g</span></p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed"> $105</p>
-								</div>
-								<div class="flex-rz space-between">
-									<p class="name roboto-condensed">Calorías</p>
-									<span class="line-1"></span>
-									<p class="name roboto-condensed"><span class="mustache-text">900 calorías</span></p>
+									<p class="name roboto-condensed"> $115</p>
 								</div>
 								<div class="collapse" id="collapsePostres3">
 									<img src="./img/fotos/postres-strudel2.jpg" alt=""
@@ -3218,49 +3203,13 @@
 							</div>
 						</div>
 
-						<!--CHOCO QUESO-->
-						<div class="col-md-4 text-center">
-							<div class="text-left p1 fz-1--5">
-								<div class="d-flex justify-content-between align-items-center">
-									<a class="collapse-button" data-toggle="collapse"
-										href="#collapsePostres4" role="button" aria-expanded="true"
-										style="text-decoration: none; width: 100%;">
-										<p class="name arvo">CHOCO QUESO</p>
-									</a>
-									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapsePostres4"
-										aria-expanded="true">
-										<i class="fa fa-plus"></i>
-									</a>
-								</div>
-								<div class="flex-rz space-between">
-									<p class="name roboto-condensed"><span class="mustache-text">1 porción</span></p>
-									<span class="line-1"></span>
-									<p class="name roboto-condensed"> $105</p>
-								</div>
-								<div class="flex-rz space-between">
-									<p class="name roboto-condensed">Calorías</p>
-									<span class="line-1"></span>
-									<p class="name roboto-condensed"><span class="mustache-text">900 calorías</span></p>
-								</div>
-								<div class="collapse" id="collapsePostres4">
-									<img src="./img/fotos/postre-choqueso.jpg" alt=""
-										style="width: 100%; margin: 10px 0;">
-									<p class="roboto-condensed brown-text mb-1--5">Pay de queso cremoso y chocolate amargo sobre salsa de cajeta y chocolate templado.</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-2"></div>
-					</div>
-
-					<div class="row">
-						<div class="col-md-2"></div>
 						<!--LODO DEL MISSISSIPPI-->
 						<div class="col-md-4 text-center">
 							<div class="text-left p1 fz-1--5">
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapsePostres5"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<p class="name arvo">LODO DEL MISSISSIPPI</p>
+										<p class="name arvo">LODO DEL MISSISSIPPI <sub class="mustache-text">(847 cal)</sub></p>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapsePostres5"
 										aria-expanded="true">
@@ -3268,14 +3217,9 @@
 									</a>
 								</div>
 								<div class="flex-rz space-between">
-									<p class="name roboto-condensed"><span class="mustache-text">1 porción</span></p>
+									<p class="name roboto-condensed"><span class="mustache-text">162g</span></p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed"> $115</p>
-								</div>
-								<div class="flex-rz space-between">
-									<p class="name roboto-condensed">Calorías</p>
-									<span class="line-1"></span>
-									<p class="name roboto-condensed"><span class="mustache-text">900 calorías</span></p>
+									<p class="name roboto-condensed"> $126</p>
 								</div>
 								<div class="collapse" id="collapsePostres5">
 									<img src="./img/fotos/postres-mississippi.jpg" alt=""
@@ -3285,7 +3229,11 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-md-2"></div>
+					</div>
 
+					<div class="row">
+						<div class="col-md-2"></div>
 						<!--PANQUES CASEROS-->
 						<div class="col-md-4 text-center">
 							<div class="text-left p1 fz-1--5">
@@ -3293,7 +3241,7 @@
 									<a class="collapse-button text-center" data-toggle="collapse"
 										href="#collapsePostres6" role="button" aria-expanded="true"
 										style="text-decoration: none;">
-										<p class="name arvo">PANQUÉS CASEROS</p>
+										<p class="name arvo">PANQUÉS CASEROS <sub class="mustache-text">(524 cal)</sub></p>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapsePostres6"
 										aria-expanded="true">
@@ -3303,12 +3251,7 @@
 								<div class="flex-rz space-between">
 									<p class="name roboto-condensed"><span class="mustache-text">1 pieza</span></p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed"> $82</p>
-								</div>
-								<div class="flex-rz space-between">
-									<p class="name roboto-condensed">Calorías</p>
-									<span class="line-1"></span>
-									<p class="name roboto-condensed"><span class="mustache-text">900 calorías</span></p>
+									<p class="name roboto-condensed"> $110</p>
 								</div>
 								<div class="collapse" id="collapsePostres6">
 									<div class="row text-left p1" style="font-size: 1.5rem;">
@@ -3316,8 +3259,8 @@
 											<p class="name arvo">PANQUÉ DE</p>
 										</div>
 										<div class="col-8">
-											<p class="roboto-condensed brown-text mb-1--5">Elote o plátano con chispas
-												de chocolate y tropiezos de nuez.</p>
+											<p class="roboto-condensed brown-text mb-1--5">Elote <span class="mustache-text">(137g)</span> o plátano con chispas
+												de chocolate <span class="mustache-text">(203g)</span> y tropiezos de nuez.</p>
 										</div>
 									</div>
 
@@ -3337,10 +3280,6 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-2"></div>
-					</div>
-					<div class="row">
-						<div class="col-md-2"></div>
 						<!--PASTEL DE CHOCOLATE FOUQUE-->
 						<div class="col-md-4 text-center">
 							<div class="text-left p1 fz-1--5">
@@ -3348,7 +3287,7 @@
 									<a class="collapse-button" data-toggle="collapse" href="#collapsePostres7"
 										role="button" aria-expanded="true" style="text-decoration: none;">
 										<div class="flex-rz space-between items-baseline">
-											<p class="name-wrap arvo flex-start">PASTEL DE CHOCOLATE FOUQUE </p>
+											<p class="name-wrap arvo flex-start">PASTEL DE CHOCOLATE FOUQUE <sub class="mustache-text">(893 cal)</sub></p>
 											<img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt="">
 										</div>
 									</a>
@@ -3358,16 +3297,44 @@
 									</a>
 								</div>
 								<div class="flex-rz space-between">
-									<p class="name roboto-condensed"><span class="mustache-text">1 porción</span></p>
+									<p class="name roboto-condensed"><span class="mustache-text">893 cal</span></p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed"> $119</p>
-								</div>
-								<div class="flex-rz space-between">
-									<p class="name roboto-condensed">Calorías</p>
-									<span class="line-1"></span>
-									<p class="name roboto-condensed"><span class="mustache-text">900 calorías</span></p>
+									<p class="name roboto-condensed"> $133</p>
 								</div>
 								<div class="collapse" id="collapsePostres7">
+									<img src="./img/fotos/postre-chocolate.jpg" alt=""
+										style="width: 100%; margin: 10px 0;">
+
+									<p class="roboto-condensed brown-text mb-1--5">Pastel de chocolate con frutos rojos y caramelo.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-2"></div>
+					</div>
+					<div class="row">
+						<div class="col-md-2"></div>
+						<!--PASTEL DE CHOCOLATE FOUQUE-->
+						<div class="col-md-4 text-center">
+							<div class="text-left p1 fz-1--5">
+								<div class="d-flex justify-content-between">
+									<a class="collapse-button" data-toggle="collapse" href="#collapsePostres8"
+										role="button" aria-expanded="true" style="text-decoration: none;">
+										<div class="flex-rz space-between items-baseline">
+											<p class="name-wrap arvo flex-start">CHEESECAKE DE BLUEBERRY <sub class="mustache-text">(529 cal)</sub></p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt="">
+										</div>
+									</a>
+									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapsePostres8"
+										aria-expanded="true">
+										<i class="fa fa-plus"></i>
+									</a>
+								</div>
+								<div class="flex-rz space-between">
+									<p class="name roboto-condensed"><span class="mustache-text">1 porción</span></p>
+									<span class="line-1"></span>
+									<p class="name roboto-condensed"> $140</p>
+								</div>
+								<div class="collapse" id="collapsePostres8">
 									<img src="./img/fotos/postre-chocolate.jpg" alt=""
 										style="width: 100%; margin: 10px 0;">
 
@@ -3379,30 +3346,25 @@
 						<div class="col-md-4 text-center">
 							<div class="text-left p1 fz-1--5">
 								<div class="d-flex justify-content-between align-items-center">
-									<a class="collapse-button" data-toggle="collapse" href="#collapsePostres8"
+									<a class="collapse-button" data-toggle="collapse" href="#collapsePostres9"
 										role="button" aria-expanded="true"
 										style="text-decoration: none; width: 95%;">
 										<div class="flex-rz space-between items-center">
-											<p class="name-wrap arvo flex-start">PAY DE QUESO CON NUEZ DE MACADAMIA </p>
+											<p class="name-wrap arvo flex-start">PAY DE QUESO CON NUEZ DE MACADAMIA <sub class="mustache-text">(1433 cal)</sub></p>
 											<img class="mr-1" src="https://pendulo.com/archivos/ideal-compartir.png" style="margin-top: 3px;height: 17px;" alt="">
 										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse"
-										href="#collapsePostres8" aria-expanded="true">
+										href="#collapsePostres9" aria-expanded="true">
 										<i class="fa fa-plus"></i>
 									</a>
 								</div>
 								<div class="flex-rz space-between">
 									<p class="name roboto-condensed"><span class="mustache-text">1 pieza</span></p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed"> $180</p>
+									<p class="name roboto-condensed"> $205</p>
 								</div>
-								<div class="flex-rz space-between">
-									<p class="name roboto-condensed">Calorías</p>
-									<span class="line-1"></span>
-									<p class="name roboto-condensed"><span class="mustache-text">900 calorías</span></p>
-								</div>
-								<div class="collapse" id="collapsePostres8">
+								<div class="collapse" id="collapsePostres9">
 									<img src="./img/fotos/postre-paidequeso.jpg" alt=""
 										style="width: 100%; margin: 10px 0;">
 									<p class="roboto-condensed brown-text mb-1--5">Cremoso pay de queso con nuez de macadamia garapiñada y salsa de cajeta.</p>
